Commit last changes from prev quarter

--- a/css/exercises/06-media-queries.html
+++ b/css/exercises/06-media-queries.html
@@ -13,9 +13,9 @@
     <header>
       <nav>
         <ul>
-          <li><a href="#">home</a></li>
-          <li><a href="#">parmesan</a></li>
-          <li><a href="#">manchego</a></li>
+          <li id="navbutton"><a href="#">home</a></li>
+          <li id="navbutton"><a href="#">parmesan</a></li>
+          <li id="navbutton"><a href="#">manchego</a></li>
         </ul>
       </nav>
     </header>
