--- a/html/examples/05-form.html
+++ b/html/examples/05-form.html
@@ -20,18 +20,19 @@
           <input type="email" id="email" name="email" />
         </div>
         <br />
-        <div>
+        <fieldset>
+          <legend>Class Standing</legend>
           <label for="class-select">Class Standing:</label>
           <select name="class" id="class-select">
             <option value="">Select One</option>
             <option value="undergrad">Undergrad</option>
             <option value="grad">Graduate</option>
           </select>
-        </div>
+        </fieldset>
         <br />
         <div>
           <label for="date">Date:</label>
-          <input type="date" id="date" name="date" />
+          <input type="date" id="date" name="date" tabindex="0" />
         </div>
         <br />
         <div>
