--- a/html/exercises/02-images.html
+++ b/html/exercises/02-images.html
@@ -8,6 +8,26 @@
   </head>
   <body>
     <main>
+      <figure>
+        <img
+          src="http://placekitten.com/200/150"
+          alt="image of a kitten"
+          width="200"
+          height="150"
+        />
+        <p>
+          <figcaption>Kittens rule!</figcaption>
+        </p>
+        <img
+          src="http://place-puppy.com/200x150"
+          alt="image of a puppy"
+          width="200"
+          height="150"
+        />
+        <p>
+          <figcaption>Puppies rule!</figcaption>
+        </p>
+      </figure>
       <!-- Add your code here -->
     </main>
   </body>
